fix: feed layout issue

--- a/Views/styles/feed.css
+++ b/Views/styles/feed.css
@@ -6,6 +6,7 @@
 }
 
 #userFeed {
+    margin-left: 511px;
     display: flex;
     flex-flow: column;
     gap: 32px;
