--- a/Views/styles/header.css
+++ b/Views/styles/header.css
@@ -1,18 +1,18 @@
 main {
-    margin-top: 128px;
+    margin: 128px;
     padding: 0 90px;
     display: flex;
     flex-flow: row nowrap;
     gap: 102px;
-}
 
+}
 
 header {
     display: flex;
     padding: 16px 90px;
     justify-content: space-between;
     align-items: center;
-    position: absolute;
+    position: fixed;
     top:0;
     width: 100%;
     background-color: white;
